2010-01-22  Peter Kasting  <pkasting@google.com>

        Reviewed by David Hyatt.

        When scrolling by page, hold back 1/8th of the visible size instead of
        40 px.
        https://bugs.webkit.org/show_bug.cgi?id=32595

        * WebView/WebFrameView.mm:
        (-[WebFrameView _verticalPageScrollDistance]):
        (-[WebFrameView initWithFrame:]):
        (-[WebFrameView _horizontalPageScrollDistance]):

2010-01-20  Jian Li  <jianli@chromium.org>

        Reviewed by Dmitry Titov.

        Implement File and Blob interfaces as defined in File API spec.
        https://bugs.webkit.org/show_bug.cgi?id=32912

        * MigrateHeaders.make:

2010-01-19  Timothy Hatcher  <timothy@apple.com>

        Fix erroneous page scrolls when trying to select text or use form elements
        with the Web Inspector docked.

        http://webkit.org/b/24403
        rdar://problem/6753925

        Reviewed by John Sullivan and Darin Adler.

        * WebCoreSupport/WebChromeClient.mm:
        (WebChromeClient::scrollRectIntoView): The scrollRect.move() call was
        incorrectly converting the rect under the assumption that the frame view
        is the same size as the WebView. Using convertRect:fromView: instead
        is enough to fix the bug, but that code isn't needed since WebCore
        already takes care of scrolling the main frame's document view, so it
        was redundant to do it here too.

2010-01-20  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Darin Adler and Adam Roben.

        Feature defines are difficult to maintain on Windows builds
        https://bugs.webkit.org/show_bug.cgi?id=33883

        * Configurations/FeatureDefines.xcconfig: Add comments about keeping feature definitions in sync.

2010-01-20  Dan Bernstein  <mitz@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/7489504> Clicking on an overflow scrollbar when the window doesn't have