@@ -1,3 +1,14 @@
+2010-01-22  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Adele Peterson.
+
+        [WebFrame loadRequest:] does not null check the WebCore::Frame
+        <rdar://problem/7416286> and https://bugs.webkit.org/show_bug.cgi?id=34021
+
+        * WebView/WebFrame.mm:
+        (-[WebFrame loadRequest:]): Null check the WebCore::Frame as it can disappear
+          out of underneath a WebFrame.
+
 2010-01-22  Peter Kasting  <pkasting@google.com>
 
         Reviewed by David Hyatt.
